bugfix: fix achievements page layout for mobile screen; fix achievement block text overflow; remove link on achievement on the same page

--- a/frontend/static/css/components/profile.css
+++ b/frontend/static/css/components/profile.css
@@ -253,7 +253,6 @@
             }
 
             .user-achievement-wrapper {
-                text-overflow: ellipsis;
                 position: relative;
                 width: 100%;
                 height: 100%;
@@ -268,9 +267,10 @@
             }
 
             .user-achievement-name {
-                display: block;
-                padding-top: 10px;
-                padding-bottom: 10px;
+                display: -webkit-box;
+                -webkit-box-orient: vertical;
+                -webkit-line-clamp: 2;
+                overflow: hidden;
                 text-align: center;
                 line-height: 1.3em;
             }
@@ -290,7 +290,7 @@
                 font-size: 140%;
                 display: flex;
                 flex-direction: column;
-                justify-content: center;
+                justify-content: space-evenly;
             }
 
             .user-achievement-back {
@@ -300,6 +300,7 @@
                 justify-content: center;
                 font-size: 90% !important;
                 transform: rotateY(180deg);
+                overflow: hidden;
             }
 
     .profile-list {
